Fit the apps grid in small size display

1. Scale down apps grid view when it does not fit inside small display
   via transform.
2. Remove box layout in app list main view to avoid duplicate layouts
   in each dragging frame.
3. Update Y position of views instead of calling Layout function during
   dragging to avoid jitter issue due to rounding error.
4. Avoid resizing apps grid view in dragging and animation, which is an
   expensive operation.

Bug: 881851
Change-Id: I78e2605727e8c7f0d93177bcf8877d796b746b86
Reviewed-on: https://chromium-review.googlesource.com/c/1259463
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596724}
Former-commit-id: b210f5920e487195555b32dfad47030a7efccc05