ash/app_list/views/horizontal_page_container.cc
@@ -56,7 +56,6 @@ void HorizontalPageContainer::Layout() {
     gfx::Rect page_bounds(
         page->GetPageBoundsForState(contents_view_->GetActiveState()));
     page_bounds.Offset(GetOffsetForPageIndex(i));
-    page->InvalidateLayout();
     page->SetBoundsRect(page_bounds);
   }
 }
@@ -82,7 +81,6 @@ void HorizontalPageContainer::OnAnimationUpdated(double progress,
     gfx::Rect bounds(
         gfx::Tween::RectValueBetween(progress, from_rect, to_rect));
     bounds.Offset(GetOffsetForPageIndex(i));
-    page->InvalidateLayout();
     page->SetBoundsRect(bounds);
   }
 }
